--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,12 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-vault-config:2.2.2.RELEASE'
     implementation 'org.springframework.vault:spring-vault-core:2.2.2.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.2'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.2'
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-configuration-processor:2.5.2'
+
+    runtimeOnly 'org.slf4j:slf4j-simple'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.2'
 //    testImplementation 'org.springframework.security:spring-security-test'
 }
 
