--- a/dev/vault/docker-compose.yml
+++ b/dev/vault/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # storage in memory
   vault:
     image: vault
-    container_name: dvault
+    container_name: mw_vault
     ports:
       - 8200:8200
     restart: always
@@ -14,6 +14,7 @@ services:
       - ./vault/data:/vault/data
       - ./vault/logs:/vault/logs
     environment:
+#      - VAULT_ADDR="https://kolegran-vault.herokuapp.com"
       - VAULT_ADDR=http://0.0.0.0:8200
       - VAULT_DEV_ROOT_TOKEN_ID=root
     cap_add:
