--- a/dev/vault/docker-compose.yml
+++ b/dev/vault/docker-compose.yml
@@ -1,7 +1,5 @@
 version: "3.8"
 services:
-  # development mode
-  # storage in memory
   vault:
     image: vault
     container_name: mw_vault
@@ -13,9 +11,10 @@ services:
       - ./vault/policies:/vault/policies
       - ./vault/data:/vault/data
       - ./vault/logs:/vault/logs
+      - ./vault/file:/vault/file
     environment:
-#      - VAULT_ADDR="https://kolegran-vault.herokuapp.com"
+#      - VAULT_ADDR:"https://kolegran-vault.herokuapp.com"
       - VAULT_ADDR=http://0.0.0.0:8200
-      - VAULT_DEV_ROOT_TOKEN_ID=root
     cap_add:
       - IPC_LOCK
+    command: vault server -config=/vault/config/vault.json
