--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=w-api-vault-config,geo-api-vault-config
-spring.cloud.vault.token=root
+spring.cloud.vault.token={VAULT_TOKEN}
 spring.cloud.vault.scheme=http
 spring.cloud.vault.kv.enabled=true
