--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
+    implementation 'org.postgresql:postgresql:42.2.23'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.3'
     implementation 'org.springframework.cloud:spring-cloud-starter-vault-config:2.2.2.RELEASE'
     implementation 'org.springframework.vault:spring-vault-core:2.2.2.RELEASE'
