Updated bootstrap.properties file

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
-spring.application.name=w-api-vault-config,geo-api-vault-config
+spring.application.name=w-api-vault-config,geo-api-vault-config,ip-stack-api-vault-config
 spring.cloud.vault.token={VAULT_TOKEN}
+# TODO: make https
 spring.cloud.vault.scheme=http
 spring.cloud.vault.kv.enabled=true
