--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-cache:2.5.4'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
     implementation 'org.postgresql:postgresql:42.2.23'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.3'
