--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.database=postgresql
 
 spring.jpa.hibernate.ddl-auto=update
 
-public.ip.mock=134.201.250.155
+public.ipv4.mock=134.201.250.155
+public.ipv6.mock=2001:4860:4860:0000:0000:0000:0000:8888
