--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ ext {
 }
 
 dependencies {
+    implementation "com.opencsv:opencsv:5.5.2"
+    implementation "com.google.guava:guava:31.0.1-jre"
     implementation "com.github.ben-manes.caffeine:caffeine:3.0.4"
     implementation "org.springframework.boot:spring-boot-starter-cache:${springBootStarterVersion}"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootStarterVersion}"
