--- a/dev/postgresql/docker-compose.yml
+++ b/dev/postgresql/docker-compose.yml
@@ -4,9 +4,8 @@ services:
     image: postgres:10
     environment:
       POSTGRES_DB: mwdev
-      POSTGRES_PASSWORD: root
-      POSTGRES_USER: root
+      POSTGRES_PASSWORD: admin
     volumes:
-      - /data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - 5435:5432
