--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.database=postgresql
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 public.ipv4.mock=134.201.250.155
 public.ipv6.mock=2001:4860:4860:0000:0000:0000:0000:8888
+
+# logging
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
